[workspace]
resolver = "2"
members = [
    "crates/builtin-docs-macro",
    "crates/common",
    "crates/compiler",
    "crates/curl-worker",
    "crates/daemon",
    "crates/db",
    "crates/kernel",
    "crates/mcp-host",
    "crates/objdef",
    "crates/rpc/moor-client",
    "crates/rpc/rpc-async-client",
    "crates/rpc/rpc-common",
    "crates/schema",
    "crates/schema-macros",
    "crates/telnet-host",
    "crates/testing/bench-utils",
    "crates/testing/lambdamoo-harness",
    "crates/testing/load-tools",
    "crates/testing/moot",
    "crates/textdump",
    "crates/var",
    "crates/web-host",
    "tools/moor-emh",
    "tools/moorc",
]
default-members = [
    "crates/var",
    "crates/common",
    "crates/compiler",
    "crates/kernel",
    "crates/objdef",
    "crates/db",
    "crates/textdump",
    "crates/rpc/rpc-common",
    "crates/rpc/rpc-async-client",
    "crates/schema",
    "crates/daemon",
    "crates/telnet-host",
    "crates/web-host",
    "crates/mcp-host",
    "crates/testing/bench-utils",
    "crates/testing/moot",
    "crates/testing/load-tools",
    "crates/curl-worker",
    "tools/moor-emh",
    "tools/moorc",
]

[workspace.package]
authors = [
    "Ryan Daum <ryan.daum@gmail.com>",
    "Norman Nunley <nnunley@gmail.com>",
    "Zoltán Nagy <abesto0@gmail.com>",
]
categories = [
    "game",
    "virtual-world",
    "mud",
    "database",
    "programming-language",
]
edition = "2024"
keywords = [
    "mud",
    "programming-language",
    "virtual-world",
    "game",
    "virtual-machine",
]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/rdaum/moor.git"
rust-version = "1.92.0"

[profile.release]
# The Rust compiler splits crates into multiple codegen units to parallelize (and thus speed up)
# compilation. However, this might cause it to miss some potential optimizations.
# You may be able to improve runtime speed and reduce binary size, at the cost of increased
# compile times, by setting the number of units to one.
codegen-units = 1
# Link-time optimization (LTO) is a whole-program optimization technique that can improve runtime
# speed by 10-20% or more, and also reduce binary size, at the cost of worse compile times.
lto = "fat"
# Having full debug info in release builds can be useful for debugging/profiling, but it will increase the size of
# the binary.
debug = "full"

# Faster release profile for testing/packaging where build time matters more than runtime optimization
[profile.release-fast]
inherits = "release"
codegen-units = 16 # Use default parallelism for faster compilation
lto = "thin" # Lighter LTO - faster to compile, still gets most benefits
debug = false # No debug symbols to save memory/disk during build

[workspace.dependencies]
# Core Runtime & System
gdt-cpus = "25.5"
libc = "0.2"
mimalloc = "0.1"
minstant = { version = "0.1", features = ["fallback-coarse"] }
signal-hook = "0.3"

# Command Line & Configuration
clap = "4.5"
clap_derive = "4.5"
figment = { version = "0.10", features = ["yaml", "json"] }

# Serialization & Data Formats
csv = "1.4"
edn-format = "3.3"
humantime = "2.2"
planus = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
xml-rs = "1.0"

# Database & Persistence
fjall = { version = "2.11", default-features = false, features = ["lz4"] }
fs2 = "0.4"

# Networking & Communication
axum = { version = "0.8", features = ["ws"] }
hickory-resolver = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls-pemfile = "2.2"
socket2 = { version = "0.6", features = ["all"] }
tmq = "0.5"
tokio-rustls = "0.26"
zmq = "0.10"

# Async Runtime & Concurrency
arc-swap = "1.7"
boxcar = "0.2"
flume = "0.11"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink", "std"] }
hierarchical_hash_wheel_timer = { version = "1.3", default-features = false, features = ["fx-hash"] }
oneshot = { version = "0.1", default-features = false, features = ["std"] }
papaya = "0.2"
rayon = "1.11"
shuttle = "0.8"
tabled = "0.20"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Authentication & Security
age = "0.11"
argon2 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "signature"] }
hmac = "0.12"
md-5 = "0.10" # For MOO's "string_hash"
oauth2 = { version = "5.0", features = ["reqwest"] }
pwhash = { version = "1.0", default-features = false }
rusty_paseto = { version = "0.8" }
sha1 = "0.10"
sha2 = "0.10"
ssh-key = "0.6"

# Time & Locale
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"

# Text Processing & Regex
arcstr = "1.2"
encoding_rs = "0.8"
natord = "1.0"
onig = { version = "6.5", default-features = false }
regex = "1.11"
scraper = "0.25"
strsim = "0.11"
unicase = "2.8"

# Compiler & Language Processing
ariadne = "0.6"
pest = "2.8"
pest_derive = "2.8"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Collections & Data Structures
ahash = "0.8"
arrayvec = "0.7"
imbl = { version = "6.1", features = ["triomphe"] }
indexmap = "2.12"
itertools = "0.14"
smallvec = "1.13"

# Error Handling & Logging
color-eyre = "0.6"
eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities & Helpers
binary-layout = "4.0"
bytes = "1.10"
byteview = "0.6"
diffy = "0.4"
enum-primitive-derive = "0.3"
hostname = "0.4"
lazy_static = "1.5"
num-traits = "0.2"
once_cell = { version = "1.21" }
paste = "1.0"
perf_event = { package = "perf-event2", version = "0.7" }
rand = "0.9"
semver = "1.0"
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
vergen = { version = "9", default-features = false, features = ["cargo"] }
vergen-gitcl = { version = "1", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

# Testing & Development
criterion = { version = "0.8", features = ["async_tokio"] }
glob = "0.3"
escargot = "0.5"
pretty_assertions = "1.4"
serial_test = "3.2"
similar = "*"
similar-asserts = "*"
tempfile = "3.23"
test-case = "3.3"
test_each_file = "0.3"
unindent = "0.2"

# Terminal & UI
colored = "3.0"
jotdown = { version = "0.9", default-features = false }
rustyline = "17.0"
termimad = "0.34"

# Patches to fix CURVE key generation issue in zmq 0.10
# See: https://github.com/erickt/rust-zmq/issues/401
[patch.crates-io]
zmq = { git = "https://github.com/jito-labs/rust-zmq", branch = "eric/libsodium-fix" }
