[package]
name = "moor-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

## Command line arguments parsing.
clap = "4.0.29"
clap_derive = "4.0.21"

#
anyhow = "1.0.70"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
async-trait = "0.1.68"
tower-http = { version = "0.4.3", features = ["add-extension", "auth", "compression-full", "trace"] }

## Asynchronous transaction processing & networking
tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.19", features = ["ws"] }

tungstenite = "*"           # Websockets
tokio-tungstenite = "*"

## Logging & tracing
tracing = "0.1.29"
tracing-subscriber = "0.3"
tracing-chrome = "0.7.1"
metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"
metrics-util = { version = "0.15.1",  default-features = false, features = ["recency", "registry", "summary"] }
metrics-macros = "0.7.0"
