[package]
name = "moor-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

## Command line arguments parsing.
clap = "4.3.19"
clap_derive = "4.3.12"

#
anyhow = "*"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
async-trait = "*"
tower-http = { version = "0.4.3", features = ["add-extension", "auth", "compression-full", "trace"] }

## Asynchronous transaction processing & networking
tokio = { version = "*", features = ["full"] }
axum = { version = "0.6.19", features = ["ws", "headers"] }

tungstenite = "*"           # Websockets
tokio-tungstenite = "*"

## Logging & tracing
tracing = "*"
tracing-subscriber = "0.3.17"
tracing-chrome = "0.7.1"
metrics-exporter-prometheus = "0.12.1"
metrics = "*"
metrics-util = { version = "*",  default-features = false, features = ["recency", "registry", "summary"] }
metrics-macros = "*"
