[package]
name = "moor-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

#
anyhow.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tower-http.workspace = true

## Asynchronous transaction processing & networking
tokio.workspace = true
axum.workspace = true

tungstenite.workspace = true
tokio-tungstenite.workspace = true

## Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
metrics-exporter-prometheus.workspace = true
metrics.workspace = true
metrics-util.workspace = true
metrics-macros.workspace = true
