[package]
name = "moor-lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]

## General usefullness
itertools = "0.10.5"
lazy_static = "1.4.0"
enum-primitive-derive = "0.2.2"
async-trait = "0.1.68"
decorum = "0.3.1"  # For ordering & comparing our floats
num-traits = "0.2.15"  # Needed for my BitEnum
text_io = "0.1.12" # Used for reading text dumps.
int-enum = "0.5.0"
bytes = "1.4.0"
smallvec = "1.10.0"
strum = { version = "0.24.1", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
## Required for MOO builtins.
magic-crypt = "3.1.12"  # For MOO's hokey 'crypt' builtin
md5 = "0.7.0" # For MOO's "string_hash"
rand = "0.8.5"

## Compiler grammar/parser
pest = "2.6.0"
pest_derive = "2.6.0"

## Error declaration/ handling
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0.40"

## For macro-ing
paste = "1.0.12"
snailquote = "0.3.1"

## Support to assist a generally more lovely concurrency story.
dashmap = "5.4.0" # Fast foncurrent hash hash
fast-counter = "1.0.0" # Concurrent thread local counters.

## Asynchronous transaction processing & networking
tokio = { version = "1.28.2", features = ["full"] }
tokio-test = "0.4.2"

## Logging & tracing
tracing = "0.1.37"
tracing-test = "0.2.4"

rocksdb = "0.21.0"
crossbeam-channel = "0.5.8"
bincode = "2.0.0-rc.3"
