[package]
name = "moor-lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
## Own
regexpr-binding = { path = "../regexpr-binding" }
moor-value = { path = "../moor-value"}

## General usefullness
itertools = "0.11.0"
lazy_static = "1.4.0"
enum-primitive-derive = "0.2.2"
async-trait = "0.1.72"
decorum = "0.3.1"  # For ordering & comparing our floats
num-traits = "0.2.15"  # Needed for my BitEnum
text_io = "0.1.12" # Used for reading text dumps.
int-enum = "0.5.0"
bytes = "1.4.0"
smallvec = "1.10.0"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.26"

## Required for MOO builtins.
pwhash = "1.0.0" # For MOO's hokey "crypt" function, which is unix's crypt(3) basically
md5 = "0.7.0" # For MOO's "string_hash"
rand = "0.8.5"

## Compiler grammar/parser
pest = "2.6.0"
pest_derive = "2.6.0"

## Error declaration/ handling
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0.40"

## For macro-ing
paste = "1.0.12"

## Asynchronous transaction processing & networking
tokio = { version = "1.28.2", features = ["full"] }
tokio-test = "0.4.2"

## Logging & tracing
tracing = "0.1.37"
tracing-test = "0.2.4"
metrics = "0.21.1"
metrics-util = { version = "0.15.1",  default-features = false, features = ["recency", "registry", "summary"] }
metrics-macros = "0.7.0"

# For the DB layer.
rocksdb = "0.21.0"
crossbeam-channel = "0.5.8"
bincode = "2.0.0-rc.3"
