[package]
name = "moor-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

rustyline-async = "0.3.2"
anyhow = "1.0.70"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3"
clap = "4.0.29"
clap_derive = "4.0.21"
async-trait = "0.1.68"
