[package]
name = "moor-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

rustyline-async = "0.3.2"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "0.3.17"
clap = "4.3.19"
clap_derive = "4.3.12"
async-trait = "*"
