[package]
name = "moor-repl"
version = "0.1.0"
edition.workspace = true

[dependencies]
moor-lib = { path = "../moor-lib" }
moor-value = { path = "../moor-value" }

rustyline-async.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
clap_derive.workspace = true
async-trait.workspace = true
