[package]
name = "moor-value"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "2.0.0-rc.3"
num-traits = "0.2.16"
int-enum = "0.5.0"
lazy_static = "1.4.0"
thiserror = "1.0.40"
decorum = "0.3.1"  # For ordering & comparing our floats
async-trait = "0.1.72"
enum-primitive-derive = "0.2.2"
bytes = "1.4.0"
uuid = { version = "1.4.1", features = ["v4"] }