[package]
name = "moor-values"
version = "0.1.0"
edition.workspace =true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
num-traits.workspace = true
strum.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
decorum.workspace = true
async-trait.workspace = true
enum-primitive-derive.workspace = true
bytes.workspace = true
uuid.workspace = true
itertools.workspace = true
yoke.workspace = true
binary-layout.workspace = true