[package]
name = "moor-common"
version = "0.9.0-alpha"
authors.workspace = true
build = "build.rs"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The set of values, and model/entities used across the system"

[build-dependencies]
shadow-rs.workspace = true

[dependencies]
# Internal Dependencies
moor-var = { path = "../var" }

# Serialization & Data Formats
bincode.workspace = true
serde.workspace = true

# Collections & Data Structures
itertools.workspace = true

# Utilities & Helpers
binary-layout.workspace = true
byteview.workspace = true
enum-primitive-derive.workspace = true
fast-counter.workspace = true
gdt-cpus.workspace = true
lazy_static.workspace = true
libc.workspace = true
minstant.workspace = true
num-traits.workspace = true
shadow-rs.workspace = true
strum.workspace = true
uuid.workspace = true

# Error Handling
thiserror.workspace = true

[features]
default = []
perf_counters = []

[dev-dependencies]
moor-bench-utils = { path = "../testing/bench-utils" }

# dev dependencies only for linux...
[target.'cfg(all(target_os = "linux"))'.dev-dependencies]
perf_event.workspace = true

[[bench]]
name = "pool_vec_benches"
harness = false
