[package]
name = "moor-common"
version = "1.0.0-beta6"
authors.workspace = true
build = "build.rs"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The set of values, and model/entities used across the system"

[build-dependencies]
vergen.workspace = true
vergen-gitcl.workspace = true

[dependencies]
# Internal Dependencies
moor-var = { path = "../var" }

# Serialization & Data Formats
serde.workspace = true
serde_json.workspace = true

# Collections & Data Structures
itertools.workspace = true

# Utilities & Helpers
binary-layout.workspace = true
byteview.workspace = true
enum-primitive-derive.workspace = true
lazy_static.workspace = true
minstant.workspace = true
num-traits.workspace = true
strum.workspace = true
uuid.workspace = true
zerocopy.workspace = true

# Error Handling
eyre.workspace = true
thiserror.workspace = true

# Tracing & Logging
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Text Processing
strsim.workspace = true

[dev-dependencies]
moor-bench-utils = { path = "../testing/bench-utils" }

[features]
default = []

[[bench]]
name = "verbcasecmp_benches"
harness = false
