[package]
name = "moor-compiler"
version = "1.0.0-beta1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Functions and structures for compilation and decompilation of MOO source, including opcode declarations and builtin declarations"

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
unindent.workspace = true

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-var = { path = "../var" }

# Serialization & Data Formats
base64.workspace = true
byteview.workspace = true
planus.workspace = true

# Compiler & Language Processing
ariadne.workspace = true
pest.workspace = true
pest_derive.workspace = true

# Collections & Data Structures
itertools.workspace = true

# Error Handling & Logging
thiserror.workspace = true
tracing.workspace = true

# Utilities & Helpers
strum.workspace = true
