[package]
name = "moor-compiler"
version = "1.0.0-beta7"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Functions and structures for compilation and decompilation of MOO source, including opcode declarations and builtin declarations"

[dev-dependencies]
chrono.workspace = true
md5 = "0.7"
pretty_assertions.workspace = true
proptest = "1.5"
test-case.workspace = true
unindent.workspace = true

[dependencies]
# Internal Dependencies
moor-common = { path = "../common" }
moor-var = { path = "../var" }

# Serialization & Data Formats
base64.workspace = true
byteview.workspace = true
planus.workspace = true

# Compiler & Language Processing
ariadne.workspace = true
pest.workspace = true
pest_derive.workspace = true

# Collections & Data Structures
itertools.workspace = true
triomphe.workspace = true

# Error Handling & Logging
thiserror.workspace = true
tracing.workspace = true

# Utilities & Helpers
strum.workspace = true
