[package]
name = "moor-console-host"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
moor-values = { path = "../values" }
rpc-common = { path = "../rpc-common" }
rpc-sync-client = { path = "../rpc-sync-client" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

# General.
bincode.workspace = true
color-eyre.workspace = true
eyre.workspace = true

## Logging & tracing
tracing-subscriber.workspace = true
tracing.workspace = true

## ZMQ / RPC
uuid.workspace = true
zmq.workspace = true

## For console
rustyline.workspace = true
