[package]
name = "moor-console-host"
version = "0.1.0"
description = "A tool to connect to a local or remote moor daemon and interact with it via the TTY."
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
moor-values = { path = "../values" }
rpc-common = { path = "../rpc-common" }
rpc-sync-client = { path = "../rpc-sync-client" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

# General.
color-eyre.workspace = true
eyre.workspace = true

## Logging & tracing
tracing-subscriber.workspace = true
tracing.workspace = true

## ZMQ / RPC
uuid.workspace = true
zmq.workspace = true

## For console
rustyline.workspace = true
