[package]
name = "moor-console-host"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A tool to connect to a local or remote moor daemon and interact with it via the TTY."

[dependencies]
moor-values = { path = "../values" }
rpc-common = { path = "../rpc-common" }
rpc-sync-client = { path = "../rpc-sync-client" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

## Error handling
color-eyre.workspace = true
eyre.workspace = true

## Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true

## ZMQ / RPC
uuid.workspace = true
zmq.workspace = true

## For console
owo-colors.workspace = true
rustyline.workspace = true
signal-hook.workspace = true
