[package]
name = "moor-curl-worker"
version = "1.1.0-dev"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A worker for initiating outbound HTTP or related requests"

[dependencies]
moor-common = { path = "../common" }
moor-var = { path = "../var" }
rpc-async-client = { path = "../rpc/rpc-async-client" }
rpc-common = { path = "../rpc/rpc-common" }

## Command line arguments parsing.
clap.workspace = true
clap_derive.workspace = true

## General.
color-eyre.workspace = true
eyre.workspace = true

## Asynchronous transaction processing & networking
reqwest.workspace = true
tokio.workspace = true

## Utilities

## Logging & tracing
tracing.workspace = true

## ZMQ / RPC
tmq.workspace = true
uuid.workspace = true
